kubernetes/apps/default/langfuse/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - langfuse.hades.casa
  parentRefs:
    - name: envoy-external
      namespace: network
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: langfuse-web
          port: 3000
